LeonCam2/ClientApp/src/custom.css
/* Provide sufficient contrast against white background */

html {
    height: 100%;
    box-sizing: border-box;
}

body {
    padding-bottom: 6rem;
    min-height: 100%;
    position: relative;
    background: #e9e9e9;
    color: #666;
    font-family: RobotoDraft, Roboto, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-image: url("/assets/background.svg");
    background-position: center top;
    background-size: cover;
    background-repeat: no-repeat;
}

@media only screen and (max-device-width: 768px) {
    body {
        background-image: unset;
        background-color: whitesmoke;
    }
}

footer ul {
    padding-left: 0;
}

a {
    color: #0366d6;
    cursor: pointer;
}

code {
    color: #E01A76;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}


.popover-error {
    border-color: #d9534f;
}

    .popover-error .popover-body {
        color: #d9534f;
    }

    .popover-error .arrow:before {
        border-top-color: #d9534f;
    }

.popover-success {
    border-color: #78ba3c;
}

    .popover-success .popover-body {
        color: #78ba3c;
    }

    .popover-success .arrow:before {
        border-top-color: #78ba3c;
    }

.popover-error-reversed {
    border-color: #d9534f;
    background-color: #d9534f;
}

    .popover-error-reversed .popover-body {
        color: white;
    }

    .popover-error-reversed .arrow:before,
    .popover-error-reversed .arrow:after {
        border-top-color: #d9534f;
    }

.popover-success-reversed {
    border-color: #78ba3c;
    background-color: #78ba3c;
}

    .popover-success-reversed .popover-body {
        color: white;
    }

    .popover-success-reversed .arrow:before,
    .popover-success-reversed .arrow:after {
        border-top-color: #78ba3c;
    }

/* Change autocomplete styles in Chrome*/
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
    -webkit-transition-delay: 9999s;
    transition-delay: 9999s;
}

